# r47zen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  upstream.source
.github/: SECURITY.md  dependabot.yml
.github/actions/setup-android-sdk/: action.yml
.github/actions/setup-xlsxio-toolchain/: action.yml
.github/project/windows-launchers/: c47.cmd  r47.cmd
.github/workflows/: android-ci.yml  android-release.yml  codeql.yml  docs-lint.yml  linux-ci.yml  prune-dev-releases.yml  resolve-upstream-core.yml  shell-lint.yml  toolchain-smoke.yml  windows-ci.yml
__DEV/iters/: ITERATION-102.md  ITERATION-99.md
__DEV/reports/: REPORT-14-LOCKFREE-HOTPATH.md
android/: gradle.properties  gradlew  r47-defaults.properties  settings.gradle
android/app/: build.gradle  lint-baseline.xml  lint.xml  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  README.md
android/app/src/main/cpp/c47-android/: android_helpers.c  android_mocks.h  android_runtime.c  clipboard_utils.c  execinfo.h  jni_activity_bridge.c  jni_bridge.h  jni_display.c  jni_input.c  jni_lifecycle.c  jni_program_load_test.c  jni_registration.c  jni_storage.c  keypad_fixture_bridge.h
android/app/src/main/cpp/c47-android/hal/: audio.c  gui.c  io.c  lcd.c  print_ir.c
android/app/src/main/cpp/c47-android/stubs/: cairo.h
android/app/src/main/cpp/c47-android/stubs/android/: log.h
android/app/src/main/cpp/c47-android/stubs/gdk/: gdk.h
android/app/src/main/cpp/c47-android/stubs/gtk/: gtk.h
android/app/src/main/cpp/r47_android/: android_helpers.c  android_runtime.c  jni_activity_bridge.c  jni_bridge.h  jni_display.c  jni_input.c  jni_lifecycle.c  jni_program_load_test.c  jni_registration.c  jni_storage.c  keypad_fixture_bridge.h
android/app/src/main/cpp/r47_android/hal/: io.c  lcd.c
android/app/src/main/cpp/r47_android/stubs/android/: log.h
android/app/src/main/cpp/r47_android/stubs/gdk/: gdk.h
android/app/src/main/cpp/r47_android/stubs/gtk/: gtk.h
android/app/src/main/cpp/r47zen/: android_helpers.c  android_runtime.c  jni_activity_bridge.c  jni_bridge.h  jni_display.c  jni_input.c  jni_lifecycle.c  jni_program_load_test.c  jni_registration.c  r47_time.h
android/app/src/main/cpp/r47zen/hal/: audio.c  gui.c  io.c  lcd.c  lcd.h
android/app/src/main/cpp/r47zen/stubs/: cairo.h
android/compat/mini-gmp-fallback/: README.md  mini-gmp.c
android/compliance/repo-notices/: components.json
android/docs/: privacy-policy.md
android/docs/dev/: 00-project-and-upstream.md  01-build-and-source-layout.md  02-kotlin-shell-architecture.md  03-upstream-interface-surfaces.md  04-native-core-and-jni.md  05-ui-rendering-and-gtk-mapping.md  06-runtime-hot-paths.md  07-ci-and-release-workflow.md  08-tests-and-contracts.md  10-build-and-source-layout.md  10-writing.md  20-kotlin-shell-architecture.md  30-native-core-and-jni.md  30-upstream-interface-surfaces.md  README.md  (+10 more)
android/gradle/: libs.versions.toml
scripts/: build_android.sh  export_upstream_keypad_fixtures.sh  generate_simulator_notice_artifacts.sh  sync_public.sh  upstream.sh
scripts/android/: build_android.sh  build_sim_assets.sh  collect_packaging_evidence.sh  compute_staged_native_inputs.sh  coverage_gate.sh  generate_staged_native_metadata.sh  install_host_llvm_toolchain.sh  install_linux_build_deps.sh  keypad_generation_contract_test.c  mutation_spot_check.sh  prepare_native_build_inputs.sh  resolve_android_artifact_metadata.sh  resolve_android_ndk_version.sh  run_16kb_runtime_smoke.sh  run_bridge_tsan_lane_contract.sh  run_build_deps_single_source_contract.sh  run_ci_contract_lib_meta_test.sh  run_connected_android_tests.sh  run_keypad_generation_contract.sh  run_llvm_toolchain_install_contract.sh  run_lock_free_signal_atomicity_contract.sh  run_mini_gmp_accounting_contract.sh  run_ndk_resolution_contract.sh  run_privacy_policy_parity_contract.sh  run_privileged_remote_script_contract.sh  run_production_signing_scope_contract.sh  run_program_load_bridge_default_contract.sh  run_published_artifacts_verifier_contract.sh  run_release_abi_single_source_contract.sh  run_release_provenance_contract.sh  run_setup_android_composite_contract.sh  run_setup_android_packages_contract.sh  run_test_integrity_contract.sh  run_toolchain_pin_coherence_contract.sh  run_workflow_contracts.sh  run_wrap_safe_time_contract.sh  smoke_host_toolchain.sh  stage_native_sources.sh  stage_program_fixture_assets.sh  verify_published_release_artifacts.sh  (+1 more)
scripts/docs/: run_docs_lint.sh
scripts/keypad-fixtures/: CMakeLists.txt  export_upstream_keypad_fixtures.sh  keypad_fixture_exporter.c
scripts/lib/: ci_contract.sh  common.sh
scripts/package-notices/: generate_simulator_notice_artifacts.sh
scripts/r47_contracts/: __init__.py  _contract_data.py  _kotlin_consts.py  _repo_paths.py  derive_key_font_policy.py  derive_key_label_geometry.py  derive_key_visual_policy.py  derive_keyboard_layout_contract.py  derive_live_stop_key_policy.py  derive_shell_geometry.py  derive_top_label_lane_layout.py  derive_touch_grid.py  run_contract_suite.sh  runtime_fonts.py  test_alpha_case_export_contract.py  test_jni_registration_contract.py  test_key_font_policy_contract.py  test_key_label_geometry_contract.py  test_key_visual_policy_contract.py  test_keyboard_layout_contract.py  test_keypad_snapshot_wire_contract.py  test_lcd_packed_row_contract.py  test_live_stop_key_policy_contract.py  test_shell_geometry_contract.py  test_top_label_lane_layout_contract.py  validate_geometry_dataset.py
scripts/security/: check_native_hardening.sh
scripts/upstream-sync/: hydrate_submodules.sh  test_fetch_retry.sh  test_resolver_policy.sh  upstream.sh
scripts/windows/: bundle_stripped_runtime.sh
scripts/workload-regressions/: bridge_tsan_harness.c  bridge_tsan_suppressions.txt  build_bridge_tsan_harness.sh  build_clipboard_overflow_harness.sh  build_graph_crash_harness.sh  clipboard_overflow_harness.c  collect_host_pgo_profile.sh  graph_crash_harness.c  harness_prelude.h  host_workload_regression.c  run_workload_regressions.sh  run_workload_regressions_sanitized.sh
(+255 files in other folders)
